# trustgeek-os

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: potentiometer.md  v1.md  v2.md
src/: bootloader_info.rs  frames.rs  gpio.rs  heap.rs  i2c.rs  interrupts.rs  main.rs  ml.rs  oled.rs  scheduler.rs  stack.rs  syscall.rs  task.rs  timer.rs  uart.rs
src/drivers/: gpio.rs  i2c.rs  mod.rs  oled.rs  uart.rs
